<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="show">Show</string>
    <string name="temperature">Temperature:</string>
    <string name="feels_like">Feels like:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="visibility">Visibility:</string>
</resources>