<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <EditText
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:autofillHints="username"
        android:hint="@string/enter_city_name"
        android:inputType="text" />

    <Button
        android:id="@+id/bt_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_city"
        android:layout_centerHorizontal="true"
        android:text="@string/show" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_show"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        tools:text="City" />

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_city"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_weather_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:text="weather_desc" />

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature" />

        <TextView
            android:id="@+id/tv_feels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feels_like" />

        <TextView
            android:id="@+id/tv_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure" />

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/tv_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visibility" />

    </LinearLayout>


</RelativeLayout>